@@ -1,5 +1,9 @@
 [b]Version 0.6.8[/b]:
 
+(2009-07-14)
+ * Check for new channels first in ~/.mplayer/channels.conf.ter. Use 
+   channels.conf if channels.conf.ter is not found.
+
 (2009-07-13)
  * Moved the option "Visualize motion vectors" from menu Options to menu
    Video.
